Implementation of Mark Unread for the desktop application.  Todos: 1.  Whisper.Notifications.remove is used to remove any notifications,     but I don't know the use case for markUnread 2.  I'm uncertain of local notifications - I've left a TODO. 3.  unit tests

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -837,6 +837,11 @@
     "description":
       "Shown in triple-dot menu next to message to allow user to start crafting a message with a quotation"
   },
+  "markUnread": {
+    "message": "Mark unread",
+    "description":
+      "Shown in triple-dot menu next to message to allow user to mark a conversation unread from here."
+  },
   "originalMessageNotFound": {
     "message": "Original message not found",
     "description":
